@startuml
abstract class not_sequential_parser {
	# <i>final</i> is_sequential()
	# <i>virtual</i> process_left_result()
	# <i>virtual</i> process_right_result()
	# <i>virtual</i> combine_results()
}

class alternation_parser {
	# <i>final</i> process_left_result()
	# <i>final</i> process_right_result()
	# <i>final</i> combine_results()
}

class exception_parser {
	# <i>final</i> process_left_result()
	# <i>final</i> process_right_result()
	# <i>final</i> combine_results()
}

not_sequential_parser <|-- alternation_parser
not_sequential_parser <|-- exception_parser
@enduml
